// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-ghost 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-600 hover:bg-gray-100 transition-colors px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-google 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed bg-white hover:bg-gray-50 text-gray-700 border border-gray-300 hover:border-gray-400 transition-colors shadow-sm px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-gradient 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed bg-gradient-to-r from-blue-500 to-blue-600 hover:shadow-md px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-kakao 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed bg-[#FEE500] hover:bg-[#FDD835] text-black transition-colors px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-nearbyButton 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed bg-[#1C4E80] hover:bg-[#154066] text-white rounded-full transition-colors px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-outline 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed border border-[#1C4E80]/15 text-[#1C4E80] hover:bg-[#1C4E80]/5 hover:border-[#1C4E80]/30 px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-popularButton 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed bg-[#1C4E80] hover:bg-[#154066] text-white transition-colors px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-primary 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed bg-[#2767a8] hover:bg-[#154066] text-white transition-colors px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-secondary 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed bg-gray-500 hover:bg-gray-600 text-white transition-colors px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-tabButton 1`] = `
<button
  class="font-semibold transition-all duration-200 flex items-center justify-center space-x-2 disabled:opacity-50 disabled:cursor-not-allowed bg-[#1C4E80] text-white transition-colors px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;

exports[`Button 컴포넌트 테스트 > primary 스타일 적용된다. > button-text 1`] = `
<button
  class="font-semibold transition-all duration-200 disabled:opacity-50 disabled:cursor-not-allowed text-[#1C4E80] text-center transition-colors bg-transparent border-none px-4 py-2 text-base rounded-lg"
  type="button"
>
  <span>
    Variable Button
  </span>
</button>
`;
